--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,29 +1,29 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>{% if https://spectre503.github.io/ %}{{ https://spectre503.github.io/ }}{% else %}{{ https://spectre503.github.io/ }}{% endif %}</title>
+<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
 <!-- CSS -->
-<link rel="stylesheet" href="{{ https://spectre503.github.io/ }}/css/owl.carousel.css" />
-<link rel="stylesheet" href="{{ https://spectre503.github.io/ }}/css/bootstrap.min.css" />
-<link rel="stylesheet" href="{{ https://spectre503.github.io/ }}/css/font-awesome.min.css" />
-<link rel="stylesheet" href="{{ https://spectre503.github.io/ }}/css/airspace.css" />
-<link rel="stylesheet" href="{{ https://spectre503.github.io/ }}/css/style.css" />
-<link rel="stylesheet" href="{{ https://spectre503.github.io/ }}/css/ionicons.min.css" />
-<link rel="stylesheet" href="{{ https://spectre503.github.io/ }}/css/animate.css" />
-<link rel="stylesheet" href="{{ https://spectre503.github.io/ }}/css/responsive.css" />
-<link rel="stylesheet" href="{{ https://spectre503.github.io/ }}/css/syntax.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/owl.carousel.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/font-awesome.min.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/airspace.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/ionicons.min.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/animate.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/responsive.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css" />
 
 <!-- Js -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-<script src="{{ https://spectre503.github.io/ }}/js/bootstrap.min.js"></script>
-<script src="{{ https://spectre503.github.io/ }}/js/owl.carousel.min.js"></script>
-<script src="{{ https://spectre503.github.io/ }}/js/plugins.js"></script>
-<script src="{{ https://spectre503.github.io/ }}/js/min/waypoints.min.js"></script>
-<script src="{{ https://spectre503.github.io/ }}/js/jquery.counterup.js"></script>
+<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+<script src="{{ site.baseurl }}/js/owl.carousel.min.js"></script>
+<script src="{{ site.baseurl }}/js/plugins.js"></script>
+<script src="{{ site.baseurl }}/js/min/waypoints.min.js"></script>
+<script src="{{ site.baseurl }}/js/jquery.counterup.js"></script>
 
 
-<script src="{{ https://spectre503.github.io/ }}/js/main.js"></script>
+<script src="{{ site.baseurl }}/js/main.js"></script>
